<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/compareCardView"
    android:background="#D3D3D3"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="#ADD8E6"
    android:elevation="2dp"
    android:layout_marginTop="10dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
    <TextView
        android:background="#1AA7EC"
        android:id="@+id/clg_name"
        android:layout_width="150dp"
        android:gravity="center"
        android:fontFamily="@font/ubuntu_bold"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/college_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fee_txt"
            android:padding="4dp"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    <TextView
        android:id="@+id/fee"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="4dp"
        android:layout_marginBottom="5dp"
        android:text="@string/fee"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courses_offered"
            android:textStyle="bold"
            android:padding="4dp"
            android:textColor="@color/black"/>
    <TextView
        android:id="@+id/courses"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="4dp"
        android:layout_marginBottom="5dp"
        android:text="@string/courses"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/college_type"
            android:padding="4dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="4dp"
        android:layout_marginBottom="5dp"
        android:text="@string/type"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/establishment_year"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    <TextView
        android:id="@+id/estd"
        android:textColor="@color/black"
        android:padding="4dp"
        android:layout_width="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_height="wrap_content"
        android:text="@string/estd"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>