<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".Compare">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/college_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/compare"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/undertext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/college_txt"
            android:layout_marginStart="20dp"
            android:layout_marginTop="9dp"
            android:textColor="#60FFFF"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/college_icond"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/compare" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/c1_txt"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sc1"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/searchView1"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:background="@color/white"
                        app:queryHint="@string/select_college"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recview1"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                <TextView
                    android:id="@+id/c2_txt"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sc2"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/searchView2"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:background="@color/white"
                        app:queryHint="@string/select_college"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recview2"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>